--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.20",
+    "@fortawesome/free-solid-svg-icons": "^5.10.0",
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
@@ -10,6 +12,8 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-star-rating-component": "^1.4.1",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.4",
     "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0"
